--- a/style.css
+++ b/style.css
@@ -2,8 +2,15 @@ h2{
    font-size: medium;
    font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
    background-color: rgb(175, 167, 167);
+   text-align: center;
 }
 p{
     color: brown;
     font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;    
+}
+.abc{
+    width: 250px;
+    height: 200px;
+    margin: 5px auto ;
+    border: 5px solid salmon;
 }
